<resources>
    <string name="app_name">OMVRemote base</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_user">User</string>
    <string name="prompt_website">(host) 127.0.0.1</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="prompt_Name">name</string>
    <string name="action_name">name</string>
    <string name="prompt_Path">path</string>
    <string name="action_path">path</string>
    <string name="prompt_Comment">Comment</string>
    <string name="action_comment">comment</string>
    <string name="action_reboot">reboot</string>
    <string name="action_standby">standby</string>
    <string name="action_shutdown">shutdown</string>
    <string name="action_wakeup">wakeup</string>
    <string name="Installed_Kernels">Installed Kernels</string>
    <string name="Clonezilla">Clonezilla</string>
    <string name="GParted_live">GParted live</string>
    <string name="SystemRescueCD">SystemRescueCD</string>
    <string name="Installed_Kernels_info">•\tSetting the wrong default boot kernel may cause the system to be inaccessible. The boot menu will still be available to select a different kernel.\n
        •\tInstalling the backports kernel with not uninstall the standard kernel.\n
        •\tInstalling the backports kernel and Proxmox kernel on the same system may cause problems.\n
        •\tIf the system does not boot using the backports kernel, the boot menu will still have the option to boot the standard kernel.</string>
    <string name="Clonezilla_info">•\tDownloads Clonezilla ISO and configures grub bootloader to allow booting from ISO.\n
        •\tSSH server is enabled by default. Login with username: user and password: live\n
        •\tWhen connecting via ssh, the ssh key will be different than the OpenMediaVault ssh key and need to be updated on the client system.\n
        •\tIP Address will be set by DHCP. Using static DHCP is recommended for headless servers.\n
        •\tWhen logging in remotely, start clonezilla with: sudo clonezilla\n
        •\tISO uses approximately 139 Mb in /boot directory on OS drive.</string>
    <string name="GParted_info">•\tDownloads GParted Live ISO and configures grub bootloader to allow booting from ISO.\n
        •\tNot recommended for headless servers. SSH is not enabled by default.\n
        •\tDefault username: user and password: live\n
        •\tIP Address will be set by DHCP.\n
        •\tISO uses approximately 219 Mb in /boot directory on OS drive.</string>
    <string name="SystemRescueCD_info">•\tDownloads SystemRescuecd ISO and configures grub bootloader to allow booting from ISO.\n
        •\tSSH server is enabled by default. Login with username: root and password: openmediavault\n
        •\tWhen connecting via ssh, the ssh key will be different than the OpenMediaVault ssh key and need to be updated on the client system.\n
        •\tIP Address will be set by DHCP. Using static DHCP is recommended for headless servers.\n
        •\tISO uses approximately 381 Mb in /boot directory on OS drive.</string>
    <string name="action_ACPI_shutdown">ACPI shutdown</string>
    <string name="action_power_off_machine">Power off the machine</string>
    <string name="action_Start">Start</string>
    <string name="action_Pause">Pause</string>
    <string name="action_Save_machine_state">Save the machine state</string>
    <string name="action_Reset">Reset</string>
    <string name="widget_omv">Choose your OMV</string>
    <string name="used_memory">Used memory</string>
    <string name="widget_auto_update">Automatic updates</string>
    <string name="widget_update_interval">Update interval</string>
    <string name="default_update_interval">60</string>
    <string name="widget_update_interval_custom_text">Update interval (in minutes)</string>
    <string name="Uptime">Uptime</string>
    <string name="CPU_usage">CPU usage</string>
    <string name="Schedule_Refresh">Schedule Refresh</string>
    <string name="Test_Certificate">Test Certificate</string>
    <string name="Info_letsEncrypt">Enable monthly update of certificate. This will create an entry in Scheduled Jobs.</string>
    <string name="Info_Test_letsEncrypt">Do not enable until first certificate has been successfully generated. Once you have a certificate use this to avoid rate limit errors.</string>
    <string name="Tips_letsEncrypt">Plugin uses the webroot installation method provided by Let\'s Encrypt. OMV configuration needs to be applied after generating certificate due to the plugin adding entries to certificates and scheduled jobs. If you generate your first certificate with the test flag enabled your certificate will have an invalid root cert from Happy Hacker. You will need to delete your /etc/letsencrypt folder and start over. Server Setup  Port 80 must be open for Let\'s Encrypt to verify your domain. Since the plugin only supports one webroot, use a reverse proxy to direct all of Let\'s Encrypt validation calls to yourdomain.tld/.well-known/acme-challenge/* to your configured webroot.</string>
    <string name="info_LetsEncrypt_Domain">Domains the certificate will be generated for and must point to this server, e.g yourdomain.tld, sub.afraid.org. Wildcard (*) domains are not supported. Separate multiple (sub)domains with a comma (,) Adresse mail</string>
    <string name="Adresse_Mail">Adresse Mail</string>
    <string name="Domain">Domain</string>
    <string name="info_LetsEncrypt_Mail">Required for registration with LetsEncrypt.org. This email address can be used to recover lost certificates.</string>
    <string name="info_LetsEncrypt_WebRoot">The root directory of the files served by your internet facing webserver.</string>
    <string name="WebRoot">WebRoot</string>
</resources>