<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_wakeup"
        android:orderInCategory="100"
        android:title="@string/action_wakeup"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reboot"
        android:orderInCategory="100"
        android:title="@string/action_reboot"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_standby"
        android:orderInCategory="100"
        android:title="@string/action_standby"
        app:showAsAction="never"
        android:icon="@drawable/ic_pause_circle_outline_black_24dp"/>
    <item
        android:id="@+id/action_shutdown"
        android:orderInCategory="100"
        android:title="@string/action_shutdown"
        app:showAsAction="never" />
</menu>