<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="5dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
            android:text="@string/Installed_Kernels"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

            <TextView
                android:text="@string/Installed_Kernels_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/card_view_Clonezilla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="5dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/Clonezilla"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:text="@string/Clonezilla_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/card_view_GParted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="5dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/GParted_live"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/GParted_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/card_view_SystemRescueCD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="5dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:text="@string/SystemRescueCD"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:text="@string/SystemRescueCD_info"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
</LinearLayout>