<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="Plugins.LetsEncrypt.LetsEncryptActivity"
    tools:showIn="@layout/activity_lets_encrypt">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="8dp"
        card_view:cardCornerRadius="@dimen/card_album_radius">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:layout_margin="8dp"
                android:id="@+id/switchScheduleRefresh"
                android:text="@string/Schedule_Refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="@string/Info_letsEncrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Switch
                android:layout_margin="8dp"
                android:id="@+id/switchTestCertificate"
                android:text="@string/Test_Certificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <TextView
                android:text="@string/Info_Test_letsEncrypt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_LetsEncrypt_Domain"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Domain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Domain"
                        android:imeActionId="@+id/Domain"
                        android:imeActionLabel="@string/Domain"
                        android:imeOptions="actionUnspecified"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_LetsEncrypt_Mail"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/Adresse_Mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Adresse_Mail"
                        android:imeActionId="@+id/Adresse_Mail"
                        android:imeActionLabel="@string/Adresse_Mail"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textUri"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/info_LetsEncrypt_WebRoot"/>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/WebRoot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/WebRoot"
                        android:imeActionId="@+id/WebRoot"
                        android:imeActionLabel="@string/WebRoot"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textUri"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/card_margin"
        android:elevation="8dp"
        card_view:cardCornerRadius="@dimen/card_album_radius"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:text="@string/Tips_letsEncrypt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.v7.widget.CardView>
    </LinearLayout>
    </ScrollView>

</RelativeLayout>
