<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_add_edite_shared_folder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddEditeSharedFolderActivity"
    tools:showIn="@layout/activity_add_edite_shared_folder"
    android:orientation="vertical">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etFolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_Name"
            android:imeActionId="@+id/host"
            android:imeActionLabel="@string/action_name"
            android:imeOptions="actionUnspecified"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
    <Spinner
        android:id="@+id/spinnerVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.design.widget.TextInputLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9">

        <EditText
            android:id="@+id/etFolderPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_Path"
            android:imeActionId="@+id/host"
            android:imeActionLabel="@string/action_path"
            android:imeOptions="actionUnspecified"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_create_new_folder_black_24dp"
            android:id="@+id/fab_FolderBrowser"
            />


    </LinearLayout>
    <Spinner
        android:id="@+id/spinnerPermissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etFolderComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_Comment"
            android:imeActionId="@+id/host"
            android:imeActionLabel="@string/action_comment"
            android:imeOptions="actionUnspecified"
            android:inputType="textAutoCorrect"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>
</LinearLayout>
